fixed image alignment on menu page

--- a/FA21.P05.Web/clientapp/src/components/ItemCards/ItemCards.css
+++ b/FA21.P05.Web/clientapp/src/components/ItemCards/ItemCards.css
@@ -2,7 +2,8 @@
   flex: 1;
   margin: "5px";
 }
-
+/* 
 .product-img {
-  min-height: 100px;
-}
+  max-width: 200px;
+  max-height: 200px;
+} */
